# trade_alerts

./: Cargo.toml  README.md
src/: alert.rs  errors.rs  lib.rs  main.rs  success.rs
src/data/: auth.rs  cache.rs  client.rs  mod.rs  request.rs
src/db/: auth.rs  client.rs  mod.rs
src/utils/: format.rs  hash.rs  mod.rs
tests/: env_variable_test.rs  integration_tests.rs
