[package]
name = "trade_alerts"
version = "0.1.0"
edition = "2021"
authors = ["Hadi hadi@xylex.ai & Floris floris@xylex.ai"]
description = "Ligthweight framework to create and manage trade alerts"
license = "MIT"
readme = "README.md"

[dependencies]
chrono = "0.4.38"
dotenv = "0.15.0"
polars = "0.39.2"
reqwest = "0.12.4"
serde = "1.0.198"
serde_json = "1.0.116"
supabase_rs = "0.2.3"
serde_yaml = "0.9"
tokio = { version = "1.37.0", features = ["full"] }
sha2 = "0.10.8"
anyhow = "1.0.82"
