[package]
name = "trade_alerts"
version = "0.1.4"
edition = "2021"
authors = ["Hadi hadi@xylex.ai & Floris floris@xylex.ai"]
description = "Ligthweight framework to create and manage trade alerts"
license = "MIT"
readme = "README.md"

[dependencies]
chrono = "0.4.38"
dotenv = "0.15.0" 
reqwest = "0.12.4"
serde_json = "1.0.116"
supabase_rs = "0.2.3"
sha2 = "0.10.8"